--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
           common_url: 'https://v2.wezan.net/',
           qiniu_url: 'https://cdn.myfans.cc/'
         },
+        forum: {
+          forumCode: '0429bfa2'
+        },
         isFirstProject: 1
       };
     </script>
